--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                     A Message from Our Founder
                 </h3>
                 <p class="text-xl md:text-2xl mb-8 font-semibold">
-                    Hi, I'm R.K. Verma, founder of <span class="text-orange-500">FIN</span><span class="text-blue-500">CLUE</span>.
+                    Hi, I'm R.K.V, founder of <span class="text-orange-500">FIN</span><span class="text-blue-500">CLUE</span>.
                 </p>
                 <p class="text-lg md:text-xl leading-relaxed text-gray-300">
                     Our mission is to revolutionize how Northeast India engages with finance. We are committed to empowering individuals and businesses with an accessible, AI-driven FINTECH platform that simplifies investing, enhances financial literacy, and provides real-time market insights. We believe in fostering growth and prosperity for everyone in the region.
